--- a/bodobeep/proj/bodobeep.vcxproj
+++ b/bodobeep/proj/bodobeep.vcxproj
@@ -70,15 +70,19 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <IncludePath>$(SolutionDir)..\src;$(IncludePath)</IncludePath>
+    <OutDir>$(SolutionDir)..\bin\$(ProjectName)\$(Configuration)_$(Platform)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <IncludePath>$(SolutionDir)..\src;$(IncludePath)</IncludePath>
+    <OutDir>$(SolutionDir)..\bin\$(ProjectName)\$(Configuration)_$(Platform)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
     <IncludePath>$(SolutionDir)..\src;$(IncludePath)</IncludePath>
+    <OutDir>$(SolutionDir)..\bin\$(ProjectName)\$(Configuration)_$(Platform)\</OutDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
     <IncludePath>$(SolutionDir)..\src;$(IncludePath)</IncludePath>
+    <OutDir>$(SolutionDir)..\bin\$(ProjectName)\$(Configuration)_$(Platform)\</OutDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <ClCompile>
